--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -5247,7 +5247,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
-  background-color: #818181;
+  background-color: #ffffff;
   border-radius: 0.25rem;
   
 }
